--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
 
     <modules>
         <module>common</module>
+        <module>gateway</module>
         <module>schedule</module>
+        <module>ticket</module>
+        <module>order</module>
     </modules>
 
     <properties>
