--- a/schedule/src/main/resources/application.yaml
+++ b/schedule/src/main/resources/application.yaml
@@ -9,6 +9,10 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    redis:
+      host: 192.168.1.106
+      port: 6379
 
 mybatis:
   mapper-locations: classpath:/mapper/**/*.xml
